--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,13 @@
     "description": "Adds a new admin page with tabs.",
     "type": "oxideshop-module",
     "keywords": ["oxid", "modules", "eShop"],
-    "homepage": "https://www.oxid-esales.com/en/home.html",
-    "license": [
-        "GPL-3.0-only",
-        "proprietary"
+    "homepage": "https://www.oxid-esales.com/",
+    "license": "GPL-3.0-or-later",
+    "authors": [
+        {
+            "name": "OXID Support",
+            "email": "support@oxid-esales.com"
+        }
     ],
     "extra": {
         "oxideshop": {
